fitness center and lactation room
fitness center and lactation room

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -6788,7 +6788,7 @@
 					<key>page52 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T20:13:09Z</date>
+						<date>2019-05-21T15:45:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -7017,11 +7017,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								f4wv5TDY8f56
-								IoEA1WIV1w==
+								rSfbsiXQqNSD
+								fbXgBlLqxw==
 								</data>
 								<key>Size</key>
-								<integer>185965</integer>
+								<integer>188313</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -7037,11 +7037,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/0jVeb7XQ+LI
-								L6qJzp5iaA==
+								N3Zz3mzezjoU
+								uN1pmQQqHA==
 								</data>
 								<key>Size</key>
-								<integer>132346</integer>
+								<integer>134813</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -8216,7 +8216,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T14:27:46Z</date>
+						<date>2019-05-21T15:33:48Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8275,21 +8275,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5SEHlmzIRPnE
-								h1Zlyu2W+A==
+								TPGeujKpTzHL
+								QR5lGhvUSw==
 								</data>
 								<key>Size</key>
-								<integer>35205</integer>
+								<integer>35739</integer>
 							</dict>
 							<key>files/stacks-image-097fb8f-400x190@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZP2FJ/yve/bb
-								UMUDEFQ7OA==
+								v9Af7SEGojgo
+								zGOufpUslA==
 								</data>
 								<key>Size</key>
-								<integer>68310</integer>
+								<integer>69192</integer>
 							</dict>
 							<key>files/stacks-image-10d7e4a.jpg</key>
 							<dict>
@@ -8455,11 +8455,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AQQpX6Vwp+W4
-								iqILFHYS5g==
+								J0oCqNLQIZun
+								8nxN/0xT1A==
 								</data>
 								<key>Size</key>
-								<integer>27501</integer>
+								<integer>28375</integer>
 							</dict>
 							<key>files/stacks-image-7700296-350x375.png</key>
 							<dict>
@@ -8715,11 +8715,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								H0kCjr0nDk/8
-								tfknDQp8Gg==
+								YGDc2WhmC44L
+								AFnnDiPokQ==
 								</data>
 								<key>Size</key>
-								<integer>403940</integer>
+								<integer>403987</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
@@ -8735,11 +8735,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8Fp4UJ/md+6e
-								VfBKqlRdKg==
+								gU1UHwKtkfW5
+								2nO1XAnqUw==
 								</data>
 								<key>Size</key>
-								<integer>803064</integer>
+								<integer>804535</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14780,7 +14780,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T14:27:46Z</date>
+						<date>2019-05-21T15:45:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14809,11 +14809,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7lLZ6PfKx8OF
-								ocEx83puGw==
+								V7rGxU4ifBvK
+								DGMmRJC7Sg==
 								</data>
 								<key>Size</key>
-								<integer>5537</integer>
+								<integer>5569</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14892,7 +14892,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T14:27:46Z</date>
+						<date>2019-05-21T15:45:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15931,11 +15931,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qslQjyJ7XKKX
-								3jzkAG55dg==
+								7PBPr+Z+BduB
+								GsqgmKfPeQ==
 								</data>
 								<key>Size</key>
-								<integer>3785</integer>
+								<integer>4636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -16079,7 +16079,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFKIVP1nVaADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFKKkvDh6WADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16089,14 +16089,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUohU/We
-				YoAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUoqS8OI
+				M4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSiFT9Z62
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSipLw4hm
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16106,7 +16106,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSiFT9Z7xgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSipLw4iQgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16116,7 +16116,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBSiFT9Z8jgAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBSipLw4ixgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
