--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-20T20:13:09Z</date>
+						<date>2019-05-21T15:45:24Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -264,11 +264,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								f4wv5TDY8f56
-								IoEA1WIV1w==
+								rSfbsiXQqNSD
+								fbXgBlLqxw==
 								</data>
 								<key>Size</key>
-								<integer>185965</integer>
+								<integer>188313</integer>
 							</dict>
 							<key>files/stacks_page_page52.js</key>
 							<dict>
@@ -284,11 +284,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/0jVeb7XQ+LI
-								L6qJzp5iaA==
+								N3Zz3mzezjoU
+								uN1pmQQqHA==
 								</data>
 								<key>Size</key>
-								<integer>132346</integer>
+								<integer>134813</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
