downloadable schedule netsci
downloadable schedule netsci

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/04-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-19T16:49:35Z</date>
+						<date>2019-05-21T19:56:17Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -312,8 +312,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								nFuzmvxWEjWZ
-								3sSD3mDn1Q==
+								JoIfqpAupNIh
+								iRv34cc10A==
 								</data>
 								<key>Size</key>
 								<integer>116189</integer>
