--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -5,10 +5,11 @@
 	<key>expandedItems</key>
 	<array>
 		<string>page16</string>
+		<string>page36</string>
 		<string>page53</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<false/>
+	<true/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
@@ -17,7 +18,7 @@
 	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page52</string>
+		<string>page55</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
