more kosher options
more kosher options

--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -9,7 +9,7 @@
 		<string>page53</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
+	<false/>
 	<key>projectViewVisible</key>
 	<true/>
 	<key>projectViewWidth</key>
@@ -18,7 +18,7 @@
 	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page55</string>
+		<string>page52</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
