--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-21T20:04:16Z</date>
+						<date>2019-05-22T00:54:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								u9hqBHBi2Q3c
-								VOGrb59foQ==
+								vEzore1nrDX5
+								twy5yTho+w==
 								</data>
 								<key>Size</key>
-								<integer>806313</integer>
+								<integer>805623</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
