--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-22T01:03:43Z</date>
+						<date>2019-05-22T01:16:11Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -554,11 +554,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Qgl9QTCc8whn
-								D4hefvPcRA==
+								T1WJcJxhE4Tn
+								SY7mVPR0zQ==
 								</data>
 								<key>Size</key>
-								<integer>805659</integer>
+								<integer>804952</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
