--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -8216,7 +8216,7 @@
 					<key>page55 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-22T01:16:11Z</date>
+						<date>2019-05-22T14:02:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -8371,6 +8371,16 @@
 								<key>Size</key>
 								<integer>91182</integer>
 							</dict>
+							<key>files/stacks-image-43d632b.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								Al0iGa9siGmh
+								ub9dFUXZfQ==
+								</data>
+								<key>Size</key>
+								<integer>24308</integer>
+							</dict>
 							<key>files/stacks-image-5433a01-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -8410,6 +8420,16 @@
 								</data>
 								<key>Size</key>
 								<integer>722662</integer>
+							</dict>
+							<key>files/stacks-image-586ba67.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								crsX/Flpm7oj
+								9IBJBkKnRg==
+								</data>
+								<key>Size</key>
+								<integer>10913</integer>
 							</dict>
 							<key>files/stacks-image-6467c3a-350x375.jpg</key>
 							<dict>
@@ -8715,31 +8735,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8D9SiAjBhZ1a
-								S0V+gTbn4w==
+								gFbgz8IrXrNs
+								5A73l3LrOA==
 								</data>
 								<key>Size</key>
-								<integer>406882</integer>
+								<integer>413074</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TMGRMNTgC7W3
-								kEN22IhgQQ==
+								iVfAPd4t1C2B
+								S6euD5crzQ==
 								</data>
 								<key>Size</key>
-								<integer>67521</integer>
+								<integer>67885</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								T1WJcJxhE4Tn
-								SY7mVPR0zQ==
+								wIX5Zu2MOYW9
+								9JHsNzaQ0g==
 								</data>
 								<key>Size</key>
-								<integer>804952</integer>
+								<integer>810628</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14892,7 +14912,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-22T13:40:35Z</date>
+						<date>2019-05-22T14:02:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -15931,8 +15951,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9ZLArLWkzYiB
-								hQz5ME8FvA==
+								XLqMFmmLnY4/
+								mz6bRl9Zuw==
 								</data>
 								<key>Size</key>
 								<integer>3785</integer>
@@ -16079,7 +16099,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFKxGp7cC6ADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcFKxvB2J9mADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -16089,14 +16109,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUrEantx
-				CYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwUrG8HYo
+				eIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSsRqe3E7
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBSsbwdii7
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -16106,7 +16126,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSsRqe3FlgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBSsbwdijtgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -16116,7 +16136,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBSsRqe3F+gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBSsbwdikogAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
