--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -9,11 +9,13 @@
 		<string>page53</string>
 	</array>
 	<key>pageInspectorVisible</key>
-	<true/>
-	<key>projectViewVisible</key>
 	<false/>
+	<key>projectViewVisible</key>
+	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
 		<string>page55</string>
