--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/5-NetSci-Speakers/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-05-22T01:03:43Z</date>
+						<date>2019-05-22T16:11:50Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -180,16 +180,6 @@
 								<key>Size</key>
 								<integer>48100</integer>
 							</dict>
-							<key>files/stacks-image-2bb391c-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								rIsBSPXIJg9o
-								JpYbQc66tQ==
-								</data>
-								<key>Size</key>
-								<integer>35003</integer>
-							</dict>
 							<key>files/stacks-image-40613bc-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -209,6 +199,16 @@
 								</data>
 								<key>Size</key>
 								<integer>33052</integer>
+							</dict>
+							<key>files/stacks-image-45366af-350x375.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								jeKyS+/FKzeJ
+								r7xa/pIVXg==
+								</data>
+								<key>Size</key>
+								<integer>24568</integer>
 							</dict>
 							<key>files/stacks-image-5433a01-350x375.jpg</key>
 							<dict>
@@ -510,16 +510,6 @@
 								<key>Size</key>
 								<integer>477959</integer>
 							</dict>
-							<key>files/stacks-image-bce74cf-350x375.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								rIsBSPXIJg9o
-								JpYbQc66tQ==
-								</data>
-								<key>Size</key>
-								<integer>35003</integer>
-							</dict>
 							<key>files/stacks-image-bded2de-350x375.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -634,8 +624,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3E3n7K1MXXzw
-								xJ9KX8H7fQ==
+								aV474mL+qBbP
+								oxdc/DkVSA==
 								</data>
 								<key>Size</key>
 								<integer>254720</integer>
@@ -644,8 +634,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ymFJzvQ+hljr
-								Nh8blePZ8g==
+								HfbptpaVG223
+								zyFUOdFuXg==
 								</data>
 								<key>Size</key>
 								<integer>28209</integer>
@@ -654,11 +644,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								n4qorbCpGGKz
-								TNxzqBXETw==
+								IFywQbJ519K0
+								Zd//YC9YRg==
 								</data>
 								<key>Size</key>
-								<integer>167399</integer>
+								<integer>168611</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
